SERVER-20096: ExportedServerParameter<T> is not thread-safe for parameters changeable at runtime.

GitOrigin-RevId: ae6f4c4f7a3cf5b992aa3972b7c6071c08746a81